name:                libarchive-conduit
version:             0.1.0.0
synopsis:            Stream archives with conduit and libarchive
license:             BSD2
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2014 Thomas Tuegel
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Codec.Archive
  other-modules:
    Codec.Archive.Internal
  other-extensions:
    ForeignFunctionInterface
  build-depends:
      base >=4.7 && <5
    , bytestring ==0.10.*
    , conduit ==1.2.*
    , resourcet ==1.1.*
    , transformers ==0.3.*
  hs-source-dirs: src
  default-language: Haskell2010
  extra-libraries: archive